ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
    src \
    src/mysql \
    src/postgresql \
    src/replicate \
    src/sqlite \
    src/oracle \
    include \
    demo \
    test \
    doc

EXTRA_DIST = \
    COPYING \
    README.md

pkgconfigdir = $(libdir)/pkgconfig/

pkgconfig_DATA = pkgconfig/tntdb.pc

EXTRA_DIST = README.md
