nobase_include_HEADERS = \
	tntdb/bits/connection.h \
	tntdb/bits/result.h \
	tntdb/bits/result_iterator.h \
	tntdb/bits/row.h \
	tntdb/bits/row_iterator.h \
	tntdb/bits/statement.h \
	tntdb/bits/statement_iterator.h \
	tntdb/bits/value.h \
	tntdb/connect.h \
	tntdb/connection.h \
	tntdb/date.h \
	tntdb/datetime.h \
	tntdb/error.h \
	tntdb/iface/iconnection.h \
	tntdb/iface/iconnectionmanager.h \
	tntdb/iface/icursor.h \
	tntdb/iface/iresult.h \
	tntdb/iface/irow.h \
	tntdb/iface/istatement.h \
	tntdb/iface/ivalue.h \
	tntdb/connectionpool.h \
	tntdb/librarymanager.h \
	tntdb/noncopyable.h \
	tntdb/refcounted.h \
	tntdb/result.h \
	tntdb/row.h \
	tntdb/smartptr.h \
	tntdb/statement.h \
	tntdb/time.h \
	tntdb/transaction.h \
	tntdb/value.h

nobase_noinst_HEADERS = \
	tntdb/mysql/bindutils.h \
	tntdb/mysql/bindvalues.h \
	tntdb/mysql/cursor.h \
	tntdb/mysql/error.h \
	tntdb/mysql/impl/boundrow.h \
	tntdb/mysql/impl/boundvalue.h \
	tntdb/mysql/impl/connection.h \
	tntdb/mysql/impl/connectionmanager.h \
	tntdb/mysql/impl/cursor.h \
	tntdb/mysql/impl/result.h \
	tntdb/mysql/impl/resultrow.h \
	tntdb/mysql/impl/rowcontainer.h \
	tntdb/mysql/impl/rowvalue.h \
	tntdb/mysql/impl/statement.h \
	tntdb/postgresql/error.h \
	tntdb/postgresql/impl/connection.h \
	tntdb/postgresql/impl/connectionmanager.h \
	tntdb/postgresql/impl/cursor.h \
	tntdb/postgresql/impl/result.h \
	tntdb/postgresql/impl/resultrow.h \
	tntdb/postgresql/impl/resultvalue.h \
	tntdb/postgresql/impl/statement.h \
	tntdb/sqlite/error.h \
	tntdb/sqlite/impl/connection.h \
	tntdb/sqlite/impl/connectionmanager.h \
	tntdb/sqlite/impl/cursor.h \
	tntdb/sqlite/impl/statement.h \
	tntdb/sqlite/impl/stmtrow.h \
	tntdb/sqlite/impl/stmtvalue.h \
	tntdb/impl/poolconnection.h \
	tntdb/impl/result.h \
	tntdb/impl/row.h \
	tntdb/impl/value.h \
	tntdb/stmtparser.h
	tntdb/oracle/connection.h \
	tntdb/oracle/connectionmanager.h \
	tntdb/oracle/cursor.h \
	tntdb/oracle/datetime.h \
	tntdb/oracle/error.h \
	tntdb/oracle/result.h \
	tntdb/oracle/row.h \
	tntdb/oracle/statement.h \
	tntdb/oracle/value.h
